--- a/index.html
+++ b/index.html
@@ -2,96 +2,126 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Untuk Nora</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Confess ke Nora</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background: #ffe6f2;
       margin: 0;
-      padding: 20px;
+      font-family: "Poppins", sans-serif;
+      background: linear-gradient(135deg, #ffe6eb, #fff0f5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      overflow: hidden;
     }
-    .container {
-      margin-top: 50px;
+    .box {
+      background: white;
+      padding: 25px;
+      border-radius: 20px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.15);
+      max-width: 600px;
+      text-align: center;
+      position: relative;
+      animation: fadeIn 1s ease-in-out;
+    }
+    img {
+      width: 120px;
+      margin-bottom: 15px;
+      animation: float 3s ease-in-out infinite;
     }
     button {
-      padding: 10px 20px;
       margin: 10px;
+      padding: 10px 20px;
       border: none;
-      border-radius: 10px;
+      border-radius: 12px;
       cursor: pointer;
-      background: #ff99cc;
+      background: #ff7aa2;
       color: white;
       font-size: 16px;
       transition: 0.3s;
     }
     button:hover {
-      background: #ff66b2;
+      background: #ff4e85;
     }
-    #noBtn {
-      position: absolute;
+    .long-text {
+      text-align: left;
+      line-height: 1.6;
     }
-    .message-box {
-      background: white;
-      border-radius: 15px;
-      padding: 20px;
-      margin: 20px auto;
-      width: 80%;
-      max-width: 500px;
-      box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
+    iframe {
+      display: none;
+      margin-top: 15px;
+      width: 100%;
+      height: 180px;
+      border: none;
     }
-    img {
-      max-width: 200px;
-      margin-top: 20px;
-      border-radius: 15px;
+    @keyframes fadeIn {
+      from {opacity: 0; transform: scale(0.9);}
+      to {opacity: 1; transform: scale(1);}
     }
-    audio {
-      margin-top: 20px;
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>Boleh aku bilang sesuatu ke kamu?</h2>
+  <div class="box" id="content">
+    <img src="https://ibb.co.com/676xbQ3v" alt="Cute Cat">
+    <p>Boleh aku bilang sesuatu kekamu?</p>
     <button onclick="nextStep(1)">Boleh</button>
-    <button id="noBtn" onmouseover="moveButton()">Engga usah</button>
-    
-    <div id="message" class="message-box" style="display:none;"></div>
-    <img id="cuteImg" src="https://ibb.co.com/676xbQ3v" alt="Cute Image" style="display:none;">
-    <audio id="bgMusic" controls autoplay loop style="display:none;">
-      <source src="https://p.scdn.co/mp3-preview/4a2e3c671f6d173adabf6d8fabc3f2ab8b0b7a2c?cid=YOUR_SPOTIFY_CLIENT_ID" type="audio/mpeg">
-      Browser kamu tidak mendukung audio.
-    </audio>
+    <button id="noBtn" onmouseover="moveNoButton()" onclick="moveNoButton()">Engga usah</button>
+    <iframe id="player" src="https://www.youtube.com/embed/Q49pnA4jsp8?autoplay=1&loop=1&playlist=Q49pnA4jsp8" allow="autoplay"></iframe>
   </div>
 
   <script>
-    let step = 0;
-
-    function moveButton() {
-      const btn = document.getElementById('noBtn');
-      const x = Math.random() * (window.innerWidth - btn.offsetWidth);
-      const y = Math.random() * (window.innerHeight - btn.offsetHeight);
-      btn.style.left = `${x}px`;
-      btn.style.top = `${y}px`;
+    function showPlayer() {
+      document.getElementById('player').style.display = 'block';
     }
 
     function nextStep(n) {
-      const msgBox = document.getElementById('message');
-      const img = document.getElementById('cuteImg');
-      const music = document.getElementById('bgMusic');
-      step += n;
-
-      if (step === 1) {
-        msgBox.style.display = 'block';
-        msgBox.innerHTML = "Aku juga tau kok jawaban kamu sebenarnya, cuman aku ingin bilang kekamu..<br><br><button onclick='nextStep(1)'>Iyaa?</button>";
-        img.style.display = 'block';
-        img.src = "https://ibb.co.com/676xbQ3v"; // gambar pertama
-      } 
-      else if (step === 2) {
-        msgBox.innerHTML = "Terimaa kasih sudah mau kenalan sama akuu, aku jujur bersyukur banget bisa kenal sama kamu, aku seberuntung itu bisa melihat kamu secara langsung di rl, bahkan kamu mau aja nemenin aku main bareng hehehe, makasii banyaakk yaaa, dan aku mau bilang sesuatu kekamu, ini sebenarnya pengen ku pendem aja karena mungkin aku sudah mengetahui jawabannyaa ╥﹏╥.<br><br>ternyata aku engga bisa selalu mendem perasaan aku maaf yahh aku pasti sangat merepotkanmu.. maaff bangett, aku minta maaf sedalam dalamnya, aku ingin jujur sama perasaanku cuman kadang aku ragu meski aku sudah tau.. baiklahh aku akan jujurr sekarang... <b>NORA SIHALOHO</b> aku sangat menyukaimu dan aku benar benar mencintaimu, maaff bangett aku merepotkanmu kali ini maaff yaa.. (◞‸◟ㆀ) terimaa kasihh yaa udah mau baca text panjang engga jelas gini huhuhuhu, sekali lagi aku minta maaf sedalam dalamnya, dan terima kasihh..";
-        img.src = "https://ibb.co.com/BKg3qCC6"; // gambar kedua
-        music.style.display = 'block';
+      const content = document.getElementById("content");
+      showPlayer(); // Mulai musik ketika lanjut
+      if (n === 1) {
+        content.innerHTML = `
+          <img src="https://ibb.co.com/676xbQ3v" alt="Cute Cat">
+          <p>Aku juga tau kok jawaban kamu sebenarnya, cuman aku ingin bilang kekamu..</p>
+          <button onclick="nextStep(2)">Iyaa?</button>
+          <iframe id="player" src="https://www.youtube.com/embed/Q49pnA4jsp8?autoplay=1&loop=1&playlist=Q49pnA4jsp8" allow="autoplay"></iframe>
+        `;
+      } else if (n === 2) {
+        content.innerHTML = `
+          <img src="https://ibb.co.com/BKg3qCC6" alt="Cute Cat">
+          <div class="long-text">
+            <p>
+              Terimaa kasih sudah mau kenalan sama akuu, aku jujur bersyukur banget bisa kenal banget sama kamu, 
+              aku seberuntung itu bisa melihat kamu secara langsung di rl, bahkan kamu mau aja nemenin aku main bareng hehehe, 
+              makasii banyaakk yaaa, dan aku mau bilang sesuatu kekamu, ini sebenarnya pengen ku pendem aja karena mungkin aku sudah 
+              mengetahui jawabannyaa ╥﹏╥. ternyata aku engga bisa selalu mendem perasaan aku maaf yahh aku pasti sangat merepotkanmu.. 
+              maaff bangett, aku minta maaf sedalam dalamnya, aku ingin jujur sama perasaanku cuman kadang aku ragu meski aku sudah tau.. 
+              baiklahh aku akan jujurr sekarang...
+            </p>
+            <p style="font-weight: bold; font-size: 20px; margin-top: 10px;">
+              NORA SIHALOHO
+            </p>
+            <p>
+              aku sangat menyukaimu dan aku benar benar mencintaimu, maaff bangett aku merepotkanmu kali ini maaff yaa.. (◞‸◟ㆀ) 
+              terimaa kasihh yaa udah mau baca text panjang engga jelas gini huhuhuhu, sekali lagi aku minta maaf sedalam dalamnya, 
+              dan terima kasihh..
+            </p>
+          </div>
+          <iframe id="player" src="https://www.youtube.com/embed/Q49pnA4jsp8?autoplay=1&loop=1&playlist=Q49pnA4jsp8" allow="autoplay"></iframe>
+        `;
       }
+    }
+
+    function moveNoButton() {
+      const noBtn = document.getElementById("noBtn");
+      const x = Math.random() * 80;
+      const y = Math.random() * 80;
+      noBtn.style.position = "absolute";
+      noBtn.style.left = x + "%";
+      noBtn.style.top = y + "%";
     }
   </script>
 </body>
