--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       if (n === 1) {
         content.innerHTML = `
           <img src="https://i.supaimg.com/9946dede-309e-4a23-80bf-15bd7cae93b9.png" />
-          <p>Aku juga tau kok jawaban kamu sebenarnya, cuman aku ingin bilang kekamu..</p>
+          <p>Aku juga tau kok jawaban kamu sebenarnya, cuman aku ingin bilang ke kamuu..</p>
           <button onclick="nextStep(2)">Iyaa?</button>
           <iframe id="player" src="" allow="autoplay"></iframe>
         `;
@@ -98,8 +98,8 @@
             <p>
               Terimaa kasih sudah mau kenalan sama akuu, aku jujur bersyukur banget bisa kenal banget sama kamu, 
               aku seberuntung itu bisa melihat kamu secara langsung di rl, bahkan kamu mau aja nemenin aku main bareng hehehe, 
-              makasii banyaakk yaaa, dan aku mau bilang sesuatu kekamu, ini sebenarnya pengen ku pendem aja karena mungkin aku sudah 
-              mengetahui jawabannyaa ╥﹏╥. ternyata aku engga bisa selalu mendem perasaan aku maaf yahh aku pasti sangat merepotkanmu.. 
+              makasii banyaakk yaaa, dan aku mau bilang sesuatu kekamuu, ini sebenarnya pengen ku pendem aja karena mungkin aku sudah 
+              mengetahui jawabannyaa ╥﹏╥. ternyata aku engga bisa selalu mendem perasaan akuu, maaf yahh aku pasti sangat merepotkanmu.. 
               maaff bangett, aku minta maaf sedalam dalamnya, aku ingin jujur sama perasaanku cuman kadang aku ragu meski aku sudah tau.. 
               baiklahh aku akan jujurr sekarang...
             </p>
