--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
   <div class="box" id="content">
     <img src="https://i.supaimg.com/9946dede-309e-4a23-80bf-15bd7cae93b9.png" />
-    <p>Boleh aku bilang sesuatu kekamu?</p>
+    <p>Boleh aku bilang sesuatu ke kamuu?</p>
     <button onclick="nextStep(1)">Boleh</button>
     <button id="noBtn" onmouseover="moveNoButton()" onclick="moveNoButton()">Engga usah</button>
     <!-- musik player tersembunyi -->
