--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       text-align: left;
       line-height: 1.6;
     }
-    /* iframe musik disembunyiin */
+    
     #player {
       display: none;
       width: 0;
@@ -72,7 +72,7 @@
     <button id="noBtn" onmouseover="moveNoButton()" onclick="moveNoButton()">Engga usah</button>
   </div>
 
-  <!-- musik player tersembunyi -->
+  
   <iframe id="player" src="" allow="autoplay"></iframe>
 
   <script>
@@ -111,7 +111,7 @@
             </p>
           </div>
         `;
-        playMusic(); // musik mulai pas step terakhir
+        playMusic(); 
       }
     }
 
